correct in place-form.html

--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -6,7 +6,7 @@
 
 <p class="form-field">{{ place_config.help_text }}</p>
 
-<form id="dataset-form" class="place-form clearfix">
+<form id="place-form" class="place-form clearfix">
 
   <fieldset>
     <input type="hidden" name="visible" value="on">
