--- a/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
@@ -1,10 +1,10 @@
 <h1>{{#_}}Get involved{{/_}}</h1>
 
-<p>{{#_}}Want to help out? Excellent!{{/_}}</p>
+<p>{{#_}}Want to help out? Awesome!{{/_}}</p>
 
-<p>{{#_}}The best way to be involved is to <a href="/place/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
+<p>{{#_}}The best way to get involved is to <a href="/place/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
 
-<p>{{#_}}We can also use help writing <a href="http://github.com/smartercleanup/duwamish">code</a>, designing a better interface, and promoting the project.{{/_}}</p>
+<p>{{#_}}We could also use help writing code, designing a better interface, and promoting the project. <a href="http://github.com/smartercleanup/duwamish">Contribute to our repository on GitHub!</a>{{/_}}</p>
 
 <p>{{#_}}If you want to see a project like this in your community, let us know!{{/_}}</p>
 
