add basic story navigation feature to place detail views, controlled by a new object in the config

--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -1,3 +1,5 @@
+        {{> place-detail-story-bar }}       
+
         {{> place-detail-promotion-bar }}
 
         <header class="place-header clearfix">
