Revert "add hand drag graphic to dynamic form instructions"
This reverts commit c79c0d69346cb9ac66d8ae05ed7436c484af819f.

--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -1,7 +1,7 @@
 <h4 class="">{{ place_config.title }}</h4>
 <div class="drag-marker-instructions">
   <p>{{#_}}Set your location by dragging the map!{{/_}}</p>
-  <img src="/static/css/images/map_instructions.svg" />
+  <img src="/static/css/images/sample_map.png" />
   <p id="geolocate" class="btn btn-block btn-large">{{#_}}Or, set my location automatically{{/_}}</p>
 </div>
 
