add duplicate story navigation bar at the bottom of place and landmark detail views

--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -54,3 +54,6 @@
         {{#if survey_config}}
         <section class="survey" id="survey"></section>
         {{/if}}
+
+        {{> place-detail-story-bar }}  
+        
