--- a/src/flavors/gtopenspace/jstemplates/place-detail.html
+++ b/src/flavors/gtopenspace/jstemplates/place-detail.html
@@ -12,7 +12,7 @@
             <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}">
           </div>
           {{/ attachments }}
-          {{#each_place_item "submitter_name" "name" "location_type"}}
+          {{#each_place_item "submitter_name" "name" "location_type" "title"}}
           <div class="place-item place-item-{{ name }}">
             <span class="place-label place-label-{{ name }}">{{label}}</span>
             <p class="place-value place-value-{{ name }}">{{nlToBr value }}</p>
