--- a/src/flavors/gtopenspace/jstemplates/place-detail.html
+++ b/src/flavors/gtopenspace/jstemplates/place-detail.html
@@ -3,7 +3,7 @@
         {{> place-detail-promotion-bar }}
 
         <header class="place-header clearfix">
-          <h1>{{#if title }}{{ title }}{{^}}{{>location-string location }}{{/if}}</h1>
+          {{#unless story}}<h1>{{#if title }}{{ title }}{{^}}{{>location-string location }}{{/if}}</h1>{{/unless}}
         </header>
 
         <section class="place-items">
@@ -24,5 +24,5 @@
         <section class="survey" id="survey"></section>
         {{/if}}
 
-        {{> place-detail-story-bar }}  
+        {{> place-detail-story-bar-tagline }}  
         
