added a span to the text after the image inside legend.html

--- a/src/sa_web/jstemplates/legend.html
+++ b/src/sa_web/jstemplates/legend.html
@@ -3,7 +3,7 @@
   {{# items }}
     <li class="shareabouts-layer-li legend-layer-li" >
         <img class="shareabouts-layer-title" location="{{ title }}" layer-title="{{ title }}" src="{{ image }}">
-        {{ title }}
+        <span>{{ title }}</span>
         <ul class="nested-legend-list">
           {{# items }}
             <li class="legend-layer-li">
