incorporate story mode features developed for gtopenspace flavor, including changes made in flavor-specific files

--- a/src/sa_web/jstemplates/place-detail-story-bar-tagline.html
+++ b/src/sa_web/jstemplates/place-detail-story-bar-tagline.html
@@ -3,7 +3,7 @@
 		<table>
 			<tr>
 				<td class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
-				<td class="story-tagline"><h1>{{title}}</h1></td>
+				<td class="story-tagline"><h5>{{story.tagline}}</h5></td>
 				<td class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
 			</tr>
 		</table>
