--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -3,7 +3,7 @@
         {{> place-detail-promotion-bar }}
 
         <header class="place-header clearfix">
-          <h1>{{#if name }}{{ name }}{{^}}{{>location-string location }}{{/if}}</h1>
+          {{#unless story}}<h1>{{#if title }}{{ title }}{{^}}{{>location-string location }}{{/if}}</h1>{{/unless}}
           <span class="place-submission-details">
             {{#_}}<strong class="point-submitter">
               {{#if submitter.avatar_url }}
@@ -55,5 +55,5 @@
         <section class="survey" id="survey"></section>
         {{/if}}
 
-        {{> place-detail-story-bar }}  
+        {{> place-detail-story-bar-tagline }}  
         
