--- a/src/sa_web/jstemplates/gis-legend-content.html
+++ b/src/sa_web/jstemplates/gis-legend-content.html
@@ -1,18 +1,23 @@
 <!-- MAP LAYERS -->
 
-<ul class="layer-type-list unstyled-list">
+<ul id="accordion-layers" class="layer-type-list unstyled-list " data-accordion-group>
   {{# groupings}}
-    <li class="layer-type-grouping">
-      <div class="layer-type-grouping-title">
-        <input id="{{ id }}" class="map-legend-grouping-checkbox"
-               type="checkbox"
-               {{#if visibleDefault}}
-               checked="checked"
-               {{/if}}
-        ></input>
-        <label for="{{ id }}">{{ title }}</label>
+    <li class="layer-type-grouping open" data-accordion>
+      <div class="" data-control>
+        {{title}}
       </div>
-      <ul class="layer-type-grouping-list unstyled-list">
+      <ul class="layer-type-grouping-list unstyled-list" data-content>
+        <li class="layer-type-li">
+          <div class="layer-type-title">
+            <input id="{{ id }}" class="map-legend-grouping-checkbox"
+                   type="checkbox"
+                   {{#if visibleDefault}}
+                   checked="checked"
+                   {{/if}}
+            ></input>
+            <label for="{{ id }}">Select all</label>
+          </div>
+        </li>
         {{# layers}}
           <li class="layer-type-li">
             <div class="layer-type-title">
