Style the accordion on the Map Layers panel

--- a/src/sa_web/jstemplates/gis-legend-content.html
+++ b/src/sa_web/jstemplates/gis-legend-content.html
@@ -2,8 +2,8 @@
 
 <ul id="accordion-layers" class="layer-type-list unstyled-list " data-accordion-group>
   {{# groupings}}
-    <li class="layer-type-grouping open" data-accordion>
-      <div class="" data-control>
+    <li class="layer-type-grouping open" style="height" data-accordion>
+      <div data-control>
         {{title}}
       </div>
       <ul class="layer-type-grouping-list unstyled-list" data-content>
