--- a/src/flavors/gtopenspace/jstemplates/pages/overview.html
+++ b/src/flavors/gtopenspace/jstemplates/pages/overview.html
@@ -2,8 +2,8 @@
 
 <p>{{#_}}Click a site to see more detail and leave a comment.{{/_}}</p>
 
-{{#_}}<h5><img src="/static/css/images/markers/marker-star.png" width="40px"> = Streetscape Improvements{{/_}}</h5>
-{{#_}}<h5><img src="/static/css/images/markers/marker-star-green.png" width="40px"> = Park Improvements{{/_}}</h5>
+{{#_}}<h5><img src="/static/css/images/markers/marker-star.png" width="40px"> = Streetscape Improvement Sites{{/_}}</h5>
+{{#_}}<h5><img src="/static/css/images/markers/marker-star-green.png" width="40px"> = Park Improvement Sites{{/_}}</h5>
 
 
 <a href="/idea/628"><p class="btn btn-block btn-large">{{#_}}Let's go!{{/_}}</p></a>
