--- a/src/sa_web/jstemplates/place-detail-story-bar.html
+++ b/src/sa_web/jstemplates/place-detail-story-bar.html
@@ -3,7 +3,19 @@
 		<table>
 			<tr>
 				<td class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
-				<td class="story-tagline"><h1>{{fullTitle}}</h1></td>
+				<td class="story-tagline">
+					<h1>
+						{{#if fullTitle}}
+							{{fullTitle}}
+						{{else}}
+							{{#if title}}
+								{{title}}
+							{{else}}
+								{{name}}
+							{{/if}}
+						{{/if}}
+					</h1>
+				</td>
 				<td class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
 			</tr>
 		</table>
