--- a/src/flavors/lakewashington/jstemplates/pages/overview.html
+++ b/src/flavors/lakewashington/jstemplates/pages/overview.html
@@ -1,9 +1,12 @@
 <h1>{{#_}}Welcome{{/_}}</h1>
 
-<p>{{#_}}We are a community of residents and stakeholders who are monitoring important issues in our community.{{/_}}</p>
+<p>{{#_}}We are a community of residents and stakeholders who are monitoring the environmental health of Lake Washington and its surrounding watersheds.{{/_}}</p>
 
 <ul>
 <li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
 </ul>
 
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
+<br>
+<br>
+{{#_}}This project made possible by our generous <a href="/page/sponsors">sponsors</a>.{{/_}}
