--- a/src/flavors/greenways/jstemplates/pages/features.html
+++ b/src/flavors/greenways/jstemplates/pages/features.html
@@ -1,25 +1,25 @@
-<h1>{{#_}}Features{{/_}}</h1>
+<h1>Features</h1>
 
-<p>{{#_}}For users,{{/_}}</p>
+<p>For users,</p>
 
 <ul>
-  <li>{{#_}}a simple map interface, to explore submitted locations and add your own{{/_}}
-  <li>{{#_}}site design that works well on small screens{{/_}}
+  <li>a simple map interface, to explore submitted locations and add your own
+  <li>site design that works well on small screens
 </ul>
 
-<p>{{#_}}For designers and developers,{{/_}}</p>
+<p>For designers and developers,</p>
 
 <ul>
-  <li>{{#_}}flexible text and layout, making it easy to translate the user interface text or customize the sentences used{{/_}}
-  <li>{{#_}}geospatial database, so you can limit contributions to within boundaries, or asiggn neighborhood names{{/_}}
+  <li>flexible text and layout, making it easy to translate the user interface text or customize the sentences used
+  <li>geospatial database, so you can limit contributions to within boundaries, or asiggn neighborhood names
 </ul>
 
-<p>{{#_}}For project managers during a project,{{/_}}</p>
+<p>For project managers during a project,</p>
 
 <ul>
-  <li>{{#_}}simple admin interface{{/_}}
-  <li>{{#_}}blogging tools to create pages or blog posts{{/_}}
-  <li>{{#_}}map and location configuration{{/_}}
-  <li>{{#_}}export to GIS{{/_}}
-  <li>{{#_}}simple status dashboard{{/_}}
+  <li>simple admin interface
+  <li>blogging tools to create pages or blog posts
+  <li>map and location configuration
+  <li>export to GIS
+  <li>simple status dashboard
 </ul>
