--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -47,19 +47,75 @@
         </header>
 
         <section class="place-items">
-          {{# attachments }}
-          <div class="place-item place-item-attachment place-attachment-{{ name }}">
-            <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}">
-          </div>
-          {{/ attachments }}
-          {{#each_place_item "submitter_name" "name" "location_type"}}
-          <div class="place-item place-item-{{ name }}">
-            <span class="place-label place-label-{{ name }}">{{label}}</span>
-            <p class="place-value place-value-{{ name }}">{{nlToBr value }}</p>
-          </div>
-          {{/each_place_item }}
+          <form id="update-place-model-form">
+            {{# attachments }}
+              <div class="place-item place-item-attachment place-attachment-{{ name }}">
+                <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}" />
+              </div>
+            {{/ attachments }}
+
+            {{#each_place_item "submitter_name" "name" "location_type"}}
+              <div class="place-item place-item-{{ name }}">
+                <span class="place-label place-label-{{ ../name }}">{{ prompt }}</span>
+
+                {{#is type "datetime"}}
+                  <p class="place-value place-value-{{ ../name }}">{{nlToBr content}}</p>
+                {{/is}}
+                
+                {{#is type "text"}}
+                  <p class="place-value place-value-{{ ../name }}">{{nlToBr content}}</p>                
+                {{/is}}
+
+                {{#is type "textarea"}}
+                  <p class="place-value place-value-{{ ../name }}">{{nlToBr content}}</p>
+                {{/is}}
+
+                {{#is type "radio_big_buttons"}}
+                  <div>
+                    {{#each content}}
+                      {{#if selected}}
+                        <span class="multi-select-response">{{ label }} </span>
+                      {{/if}}
+                    {{/each}}
+                  </div>
+                {{/is}}
+
+                {{#is type "checkbox_big_buttons"}}
+                  <div>
+                    {{#each content}}
+                      {{#if selected}}
+                        <span class="multi-select-response">{{ label }} </span>
+                      {{/if}}
+                    {{/each}}
+                    </div>
+                {{/is}}
+
+                {{#is type "binary_toggle"}}
+                  <p>
+                    {{#if content.selected}}
+                      {{ content.selectedLabel }}
+                    {{else}}
+                      {{ content.unselectedLabel }}
+                    {{/if}}
+                  </p>
+                {{/is}}
+
+                {{#is type "dropdown"}}
+                  {{#each content}}
+                    <p>
+                      {{#if selected}}
+                        {{nlToBr label}}
+                      {{/if}}
+                    </p>
+                  {{/each}}
+                {{/is}}
+
+                <div style="clear:both"></div>
+              </div>
+            {{/each_place_item }}
+          </form>
         </section>
 
         {{#if survey_config}}
-        <section class="survey" id="survey"></section>
+          <section class="survey" id="survey"></section>
         {{/if}}
