don't show a duplicated title field in place detail views and the list view

--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -54,7 +54,7 @@
               </div>
             {{/ attachments }}
 
-            {{#each_place_item "submitter_name" "name" "location_type"}}
+            {{#each_place_item "submitter_name" "name" "location_type" "fullTitle" "title" "name"}}
               <div class="place-item place-item-{{ name }}">
                 <span class="place-label place-label-{{ ../name }}">{{ prompt }}</span>
 
