--- a/src/sa_web/jstemplates/place-detail-story-bar-tagline.html
+++ b/src/sa_web/jstemplates/place-detail-story-bar-tagline.html
@@ -2,9 +2,9 @@
 	<section class="place-story-bar">
 		<table>
 			<tr>
-				<td valign="top" class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
+				<td class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
 				<td class="story-tagline"><h5>{{story.tagline}}</h5></td>
-				<td valign="top" class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
+				<td class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
 			</tr>
 		</table>
 	</section>
