--- a/src/sa_web/jstemplates/place-detail-story-bar.html
+++ b/src/sa_web/jstemplates/place-detail-story-bar.html
@@ -2,7 +2,7 @@
 	<section class="place-story-bar">
 		<table>
 			<tr>
-				<td valign="top" class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
+				<td class="btn-previous-story-nav {{#unless story.previous}}story-nav-disabled{{/unless}}"></td>
 				<td class="story-tagline">
 					<h1>
 						{{#if fullTitle}}
@@ -16,7 +16,7 @@
 						{{/if}}
 					</h1>
 				</td>
-				<td valign="top" class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
+				<td class="btn-next-story-nav {{#unless story.next}}story-nav-disabled{{/unless}}"></td>
 			</tr>
 		</table>
 	</section>
