Add sponsor page translations, other minor updates espanoles

--- a/src/flavors/bogtobay/jstemplates/pages/overview.html
+++ b/src/flavors/bogtobay/jstemplates/pages/overview.html
@@ -10,4 +10,4 @@
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
 <br>
 <br>
-This project made possible by our generous <a href="/page/sponsors">sponsors</a>.
+{{#_}}This project made possible by our generous <a href="/page/sponsors">sponsors{{/_}}</a>.
