Add geometry editor
This commit adds the following functionality:

- Polygon and linestring geometry creation via the dynamic form
- Polygon and linestring geometry editing via the detail view editor
- Geometry fill and opacity control

It introduces dependencies on:

- The Spectrum jQuery colorpicker library
- The leaflet-draw plugin

Addresses: #410

--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -18,6 +18,7 @@
   </table>
 </div>
 <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
+<p class="no-geometry-warning is-visuallyhidden">{{#_}}It looks like you didn't create any geometry. Use the toolbar to draw some geometry.{{/_}}</p>
 
 <p class="form-field">{{ placeConfig.help_text }}</p>
 
