stories prez test

--- a/src/flavors/duwamish_flavor/jstemplates/pages/stories.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/stories.html
@@ -1,2 +1,14 @@
-<a href="/history" rel="internal"><p class="btn btn-block btn-large">{{#_}}Let's go!{{/_}}</p></a>
+<h1>History</h1>
 
+<img src="http://i.imgur.com/ZAsJfMg.png" style="margin-bottom:10px">
+
+<a href="/history" rel="internal"><p class="btn btn-block btn-large">{{#_}}Explore history{{/_}}</p></a>
+
+
+<h1>Community Priorities</h1>
+<a href="/history" rel="internal"><p class="btn btn-block btn-large">{{#_}}Explore community priorities{{/_}}</p></a>
+<img src="http://i.imgur.com/ZAsJfMg.png">
+
+<h1>Habitat restoration</h1>
+<a href="/history" rel="internal"><p class="btn btn-block btn-large">{{#_}}Explore habitat restoration{{/_}}</p></a>
+<img src="http://i.imgur.com/ZAsJfMg.png">
