--- a/src/flavors/gtopenspace/jstemplates/place-detail.html
+++ b/src/flavors/gtopenspace/jstemplates/place-detail.html
@@ -1,32 +1,95 @@
         {{> place-detail-story-bar }}
-
-        {{> place-detail-promotion-bar }}
-
+  
         <header class="place-header clearfix">
-          {{#unless story}}<h1>{{#if title }}{{ title }}{{^}}{{>location-string location }}{{/if}}</h1>{{/unless}}
+          <h1 class="place-header-title {{#if story}}is-visuallyhidden{{/if}}">
+            {{>location-string location }}
+            {{#if fullTitle}}
+              {{fullTitle}}
+            {{else}}
+              {{#if title}}
+                {{title}}
+              {{else}}
+                {{name}}
+              {{/if}}
+            {{/if}}
+          </h1>
         </header>
 
         <section class="place-items">
           {{# attachments }}
-          <div class="place-item place-item-attachment place-attachment-{{ name }}">
-            <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}">
-          </div>
+            <div class="place-item place-item-attachment place-attachment-{{ name }}">
+              <img src="{{ file }}" class="place-value place-value-{{ name }}" alt="{{ name }}" />
+            </div>
           {{/ attachments }}
-          {{#each_place_item "submitter_name" "name" "location_type" "title"}}
-          <div class="place-item place-item-{{ name }}">
-            <span class="place-label place-label-{{ name }}">{{label}}</span>
-            <p class="place-value place-value-{{ name }}">{{nlToBr value }}</p>
-          </div>
+
+          {{#each_place_item "submitter_name" "name" "location_type" "fullTitle" "title" "name"}}
+            <div class="place-item place-item-{{ name }}">
+              <span class="place-label place-label-{{ name }}">{{ prompt }}</span>
+
+              {{#is type "datetime"}}
+                <p class="place-value place-value-{{ name }}">{{nlToBr content}}</p>
+              {{/is}}
+              
+              {{#is type "text"}}
+                <p class="place-value place-value-{{ name }}">{{nlToBr content}}</p>                
+              {{/is}}
+
+              {{#is type "textarea"}}
+                <p class="place-value place-value-{{ name }}">{{nlToBr content}}</p>
+              {{/is}}
+
+              {{#is type "radio_big_buttons"}}
+                <ul>
+                  {{#each content}}
+                    {{#if selected}}
+                      <li class="multi-select-response place-value">{{ label }} </li>
+                    {{/if}}
+                  {{/each}}
+                </ul>
+              {{/is}}
+
+              {{#is type "checkbox_big_buttons"}}
+                <ul>
+                  {{#each content}}
+                    {{#if selected}}
+                      <li class="multi-select-response place-value">{{ label }} </li>
+                    {{/if}}
+                  {{/each}}
+                </ul>
+              {{/is}}
+
+              {{#is type "binary_toggle"}}
+                <ul>
+                  <li class="place-value">
+                    {{#if content.selected}}
+                      {{ content.selectedLabel }}
+                    {{else}}
+                      {{ content.unselectedLabel }}
+                    {{/if}}
+                  </li>
+                </ul>
+              {{/is}}
+
+              {{#is type "dropdown"}}
+                {{#each content}}
+                  {{#if selected}}
+                    <ul>
+                      <li class="place-value">
+                        {{nlToBr label}}
+                      </li>
+                    </ul>
+                  {{/if}}
+                {{/each}}
+              {{/is}}
+
+              <div style="clear:both"></div>
+            </div>
           {{/each_place_item }}
         </section>
 
         {{#if survey_config}}
+
         <section class="survey" id="survey"></section>
         {{/if}}
 
-        {{^if survey_config}}
-        <a href="/{{ datasetSlug }}/{{ id }}" class="view-on-map-btn btn btn-small">View On Map</a>
-        {{/if}}
-
-        {{> place-detail-story-bar-tagline }}  
-        
+        {{> place-detail-story-bar-tagline }}
