fix routes to /new

--- a/src/flavors/pboakland/jstemplates/pages/contribute.html
+++ b/src/flavors/pboakland/jstemplates/pages/contribute.html
@@ -2,7 +2,7 @@
 
 <p>{{#_}}Want to help out? Excellent!{{/_}}</p>
 
-<p>{{#_}}The best way to be involved is to <a href="/place/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
+<p>{{#_}}The best way to be involved is to <a rel="internal" href="/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
 
 <p>{{#_}}We can also use help writing <a href="http://github.com/smartercleanup/duwamish">code</a>, designing a better interface, and promoting the project.{{/_}}</p>
 
