--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -3,7 +3,7 @@
 <p>{{#_}}We are a community of residents and stakeholders who are monitoring important issues in our community.{{/_}}</p>
 
 <ul>
-<li>{{#_}}Help us out and <a href="/place/new">submit a report</a> on the map!{{/_}}</li>
+<li>{{#_}}Help us out and <a rel="internal" href="/new">submit a report</a> on the map!{{/_}}</li>
 </ul>
 
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
