--- a/src/flavors/pboakland/jstemplates/pages/contribute.html
+++ b/src/flavors/pboakland/jstemplates/pages/contribute.html
@@ -1,11 +1,16 @@
-<h1>{{#_}}Get involved{{/_}}</h1>
+<h1>{{#_}}Get more involved{{/_}}</h1>
 
-<p>{{#_}}Want to help out? Excellent!{{/_}}</p>
+<p>Already submitted an idea? There are many more ways to get involved in participatory budgeting:
+</p>
 
-<p>{{#_}}The best way to be involved is to <a rel="internal" href="/new">submit a report</a> on the map, or comment on someone else's report.{{/_}}</p>
+<h3>Attend a Neighborhood Assembly</h3>
 
-<p>{{#_}}We can also use help writing <a href="http://github.com/smartercleanup/duwamish">code</a>, designing a better interface, and promoting the project.{{/_}}</p>
+<p>Discuss your ideas in person with your neighbors at a District 2 Neighborhood Assembly! Assemblies will be held in late January - stay tuned for details.</p>
 
-<p>{{#_}}If you want to see a project like this in your community, let us know!{{/_}}</p>
+<h3>Volunteer</h3>
 
-{{#_}}<a href="http://eepurl.com/6IfA5">Send us a message</a> and we'll be in touch ;){{/_}}
+<p>There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up here.</p>
+
+<h3>Contact Us</h3>
+<p>Have a question? Feel free to contact us.</p>
+
