--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -94,7 +94,7 @@
         {{#is type "radio_big_buttons"}}
           <div>
             {{#each content}}
-                <input type="radio" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn" {{^optional}}required{{/optional}}>
+                <input type="radio" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn" {{^../optional}}required{{/../optional}}>
                 <label for={{ value }}>{{ label }}</label>
             {{/each}}
           </div>
