--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -4,13 +4,13 @@
 
 <h3>{{#_}}Attend a Neighborhood Assembly{{/_}}</h3>
 
-<p>Discuss your ideas in person with your neighbors at a District 2 Neighborhood Assembly! Assemblies will be held in late January - stay tuned for details.</p>
+<p>{{#_}}Discuss your ideas in person with your neighbors at a District 2 Neighborhood Assembly! Assemblies will be held in late January - stay tuned for details.{{/_}}</p>
 
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
-<p>There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up here.</p>
+<p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up here.{{/_}}</p>
 
 <h3>{{#_}}Contact Us{{/_}}</h3>
 
-<p>Have a question? Feel free to contact us.</p>
+<p>{{#_}}Have a question? Feel free to contact us.{{/_}}</p>
 
