update about page to target=blank

--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -8,9 +8,9 @@
 <br>
 <p>{{#_}}In the Spring, community members will review all of the ideas we have received, and develop them into full proposals. In May, all district residents will vote on the top projects.{{/_}}</p>
 
-<p>{{#_}}For more information on the City of Oakland’s Community Development Block Grant (CDBG) program, click <a href="http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm">here</a>.{{/_}}</p>
+<p>{{#_}}For more information on the City of Oakland’s Community Development Block Grant (CDBG) program, click <a href="http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm" target=”_blank”>here</a>.{{/_}}</p>
 
-<p>{{#_}}For information on participatory budgeting in the U.S. and Canada, visit the website of the <a href="http://www.participatorybudgeting.org/">Participatory Budgeting Project</a>.{{/_}}</p>
+<p>{{#_}}For information on participatory budgeting in the U.S. and Canada, visit the website of the <a href="http://www.participatorybudgeting.org/" target=”_blank”>Participatory Budgeting Project</a>.{{/_}}</p>
 
 <a href=""></a>
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
