fix spacing issue in list view

--- a/src/sa_web/jstemplates/place-detail.html
+++ b/src/sa_web/jstemplates/place-detail.html
@@ -114,10 +114,9 @@
                   {{/if}}
                 {{/each}}
               {{/is}}
-
-              <div style="clear:both"></div>
             </div>
           {{/each_place_item }}
+          <div class="clearfix"></div>
         </section>
 
         {{#if survey_config}}
