update pboakland text, .po files, add housing marker

--- a/src/flavors/pboakland/jstemplates/pages/guidelines.html
+++ b/src/flavors/pboakland/jstemplates/pages/guidelines.html
@@ -1,7 +1,7 @@
 <h1>{{#_}}Guidelines{{/_}}</h1>
 
 <ul>
-<li>{{#_}}Anyone can post ideas.{{/_}}</li>
-<li>{{#_}}To add an idea, drag the map until the crosshairs are over the desired location. Only ideas within the boundaries of District 2 will be considered.{{/_}}</li>
+<li>{{#_}}<strong>Anyone</strong> can post ideas.{{/_}}</li>
+<li>{{#_}}To add an idea, drag the map until the crosshairs are over the desired location. <strong>Only ideas within the boundaries of District 1 and District 2 will be considered.</strong>{{/_}}</li>
 <li>{{#_}}Eligible ideas can be programs, services, or infrastructure improvements and must primarily benefit low-to-moderate income communities.{{/_}}</li>
 </ul>
