--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -4,13 +4,14 @@
 
 <h3>{{#_}}Attend a Neighborhood Assembly{{/_}}</h3>
 
-<p>{{#_}}Discuss your ideas in person with your neighbors at a District 2 Neighborhood Assembly! Assemblies will be held in late January - stay tuned for details.{{/_}}</p>
+<p>{{#_}}Discuss your ideas in person with your neighbors at an upcoming Neighborhood Assembly! Assemblies will be held in late January and are currently being scheduled. Please sign up “Contact” form below to receive details.{{/_}}</p>
 
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
-<p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up here.{{/_}}</p>
+<p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up <a href="http://www.123contactform.com/form-2317799/My-Form">here</a>.{{/_}}</p>
 
 <h3>{{#_}}Contact Us{{/_}}</h3>
 
 <p>{{#_}}Have a question? Feel free to contact us.{{/_}}</p>
 
+<iframe src="http://www.123contactform.com/form-1169694/PB-Oakland-Contact-Us" height="400" width=100% </iframe>
