--- a/src/flavors/pboakland/jstemplates/pages/overview.html
+++ b/src/flavors/pboakland/jstemplates/pages/overview.html
@@ -6,11 +6,10 @@
 
 <h4>{{#_}}Idea submission for the PB process in Districts 1 and 2 is now open! If you have an idea for a project to improve your district, please share it on the map!{{/_}}</h4>
 <br>
-<p>{{#_}}In the early February, community volunteers will review and prioritize all of the ideas and turn them into full proposals. At the end of February, residents of low- and moderate-income neighborhoods in Districts 1 and 2 will vote on the top projects.</p>
+<p>{{#_}}In the early February, community volunteers will review and prioritize all of the ideas and turn them into full proposals. At the end of February, residents of low- and moderate-income neighborhoods in Districts 1 and 2 will vote on the top projects.{{/_}}</p>
 
 <p>{{#_}}For more information on the City of Oakland’s Community Development Block Grant (CDBG) program, click <a href="http://www2.oaklandnet.com/government/o/hcd/s/CDBG/index.htm" target=”_blank”>here</a>.{{/_}}</p>
 
 <p>{{#_}}For information on participatory budgeting in the U.S. and Canada, visit the website of the <a href="http://www.participatorybudgeting.org/" target=”_blank”>Participatory Budgeting Project</a>.{{/_}}</p>
 
-<a href=""></a>
 <p class="btn btn-block btn-large close-btn">{{#_}}Start Mapping!{{/_}}</p>
