working css on get_involved

--- a/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
+++ b/src/flavors/duwamish_flavor/jstemplates/pages/contribute.html
@@ -1,4 +1,8 @@
-<h1>{{#_}}Get involved{{/_}}</h1>
+<div class="getinvolved">
+
+<i class="fa fa-info-circle" aria-hidden="true"></i>
+
+<h1 id="getinvolved">{{#_}}Get involved{{/_}}</h1>
 
 <p>{{#_}}Want to help out? Awesome!{{/_}}</p>
 
@@ -8,4 +12,6 @@
 
 <p>{{#_}}If you want to see a project like this in your community, let us know!{{/_}}</p>
 
-{{#_}}<a href="http://eepurl.com/6IfA5">Send us a message</a> and we'll be in touch ;){{/_}}
+{{#_}}<i class="fa fa-hand-o-right" aria-hidden="true"></i> <a href="http://eepurl.com/6IfA5">Send us a message</a> and we'll be in touch ;){{/_}}
+
+</div>
