update typo on get involved page

--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -4,7 +4,7 @@
 
 <h3>{{#_}}Attend a Neighborhood Assembly{{/_}}</h3>
 
-<p>{{#_}}Discuss your ideas in person with your neighbors at an upcoming Neighborhood Assembly! Assemblies will be held in late January and are currently being scheduled. Please sign up “Contact” form below to receive details.{{/_}}</p>
+<p>{{#_}}Discuss your ideas in person with your neighbors at an upcoming Neighborhood Assembly! Assemblies will be held in late January and are currently being scheduled. Please sign up using the “Contact” form below to receive details.{{/_}}</p>
 
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
