--- a/src/sa_web/jstemplates/add-places.html
+++ b/src/sa_web/jstemplates/add-places.html
@@ -3,9 +3,11 @@
 	  <span id="add-place-btn-container">
 	    <a href="#" id="add-place" class="btn btn-block btn-primary btn-large"><span>{{ add_button_label }}</span></a>
 	  </span>
-	  <span id="story-btn-container">
-	    <a href="/page/stories" rel="internal" id="nav-stories" class="btn btn-block btn-primary btn-large"><span>{{ story_button_label }}</span></a>
-	  </span>
+	  {{#if hasStories}}
+		  <span id="story-btn-container">
+		    <a href="/page/stories" rel="internal" id="nav-stories" class="btn btn-block btn-primary btn-large"><span>{{ story_button_label }}</span></a>
+		  </span>
+	  {{/if}}
 	</div>
   <span id="centerpoint"><span class="shadow"></span><span class="x"></span><span class="marker"></span></span>
 {{/ adding_supported }}
