--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -14,4 +14,4 @@
 
 <p>{{#_}}Have a question? Feel free to contact us.{{/_}}</p>
 
-<iframe src="http://www.123contactform.com/form-1169694/PB-Oakland-Contact-Us" height="400" width=100% </iframe>
+{{#_}}<iframe src="http://www.123contactform.com/form-1169694/PB-Oakland-Contact-Us" height="400" width=100% </iframe>{{/_}}
