--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -8,7 +8,7 @@
 
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
-<p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up <a href="http://www.123contactform.com/form-2317799/My-Form">here</a>.{{/_}}</p>
+<p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up <a href="http://www.123contactform.com/form-2317799/PB-Oakland-Volunteer-Sign-Up" target="_blank">here</a>.{{/_}}</p>
 
 <h3>{{#_}}Contact Us{{/_}}</h3>
 
