remove 'set my location' button, increase font for map drag instructions

--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -2,14 +2,14 @@
 <div class="drag-marker-instructions">
   <table>
     <tr id="drag-marker-content">
-      <td>
+<!--       <td>
         <div class="btn btn-inline btn-geolocate">
           <img src="/static/css/images/locate-me.png" />
           {{#_}}Set my location{{/_}}
         </div> 
-      </td>
+      </td> -->
       <td>
-        <p class="drag-text">{{#_}}Or, drag the map to set your location{{/_}}</p>
+        <p class="drag-text">{{#_}}First, drag the map to set your location{{/_}}</p>
       </td>
     </tr>
     <tr id="geolocating-msg" class="is-visuallyhidden">
