--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -18,7 +18,7 @@
 {{#_}}<h4>Assembly 2</h4>
 <strong>Thursday, January 26th 6:00 pm - 8:00 pm</strong>
 <br>Williams Chapel
-<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-122.2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1"><br>1410 10th St.
+<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fwww.google.com%2Fmaps%2Fplace%2FWilliams%2BChapel%2BBaptist%2BChurch%2F%4037.792124%2C-122.2513913%2C17z%2Fdata%3D%213m1%214b1%214m5%213m4%211s0x808f87246c4dce49%3A0x75f519425c5dafab%218m2%213d37.792124%214d-122.249208&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=4&test_email=1"><br>1410 10th Ave.
 <br>Oakland, CA 94606</a>
 <br>English/Spanish Translation{{/_}}
 <br><br>
