--- a/src/flavors/pboakland/jstemplates/pages/getinvolved.html
+++ b/src/flavors/pboakland/jstemplates/pages/getinvolved.html
@@ -26,6 +26,9 @@
 
 <h4>{{#_}}<a href="https://participatorybudgeting.nationbuilder.com/r?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew%2Fviewform&e=1860e7904dcd651a71dfc072d7cae68cb859e106&utm_source=participatorybudgeting&utm_medium=email&utm_campaign=oakassembly&n=6&test_email=1">RSVP for the assembly here!</a>{{/_}}</h4>
 <br>
+
+{{#_}}<a href="https://docs.google.com/forms/d/e/1FAIpQLSdjvMEknTchNBxteVitB3340hKzZrAP0tTXbb9ogXwaZfVxew/viewform"><img src="http://i.imgur.com/VMu0cem.png"></a>{{/_}}
+
 <h3>{{#_}}Volunteer{{/_}}</h3>
 
 <p>{{#_}}There are lots of ways to get involved in PB in Oakland! You can help to get the word out to district residents, facilitate small group meetings, provide support at PB events, and more. Sign up <a href="http://www.123contactform.com/form-2317799/PB-Oakland-Volunteer-Sign-Up" target="_blank">here</a>.{{/_}}</p>
