--- a/src/base/jstemplates/add-places.html
+++ b/src/base/jstemplates/add-places.html
@@ -1,6 +1,15 @@
 {{# adding_supported }}
-  <div id="add-place-btn-container" class="pos-top-right">
-    <a href="#" id="add-place" class="btn btn-block btn-primary btn-large"><span>{{ add_button_label }}</span></a>
-  </div>
+	<div id="main-btns-container" class="pos-top-right">
+		{{#if add_button_label}}
+		  <span id="add-place-btn-container">
+		    <a href="#" id="add-place" class="btn btn-block btn-primary btn-large"><span>{{ add_button_label }}</span></a>
+		  </span>
+		{{/if}}
+		{{#if story_button_label}}
+		  <span id="story-btn-container">
+		    <a href="/page/stories" rel="internal" id="nav-stories" class="btn btn-block btn-primary btn-large"><span>{{ story_button_label }}</span></a>
+		  </span>
+		{{/if}}
+	</div>
   <span id="centerpoint"><span class="shadow"></span><span class="x"></span><span class="marker"></span></span>
 {{/ adding_supported }}
